2016-04-13  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-478

	* 3rdparty/invlib/*: invlib update to include new timing
	functionality.

	* src/oem.h: Added timing for arithmetic operations.

2016-04-12  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-477

	* doc/uguide/wfuns.tex: Fixed minor typos.

2016-04-12  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-476

	* doc/uguide/formalism.tex: Fixed minor typos.

	* doc/uguide/ppath_theory.tex: Fixed minor typos.

2016-04-10  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-475

	* 3rdparte/invlib/* Changed FM interface so that Jacobian
	computation also computes y prediction.

	* m_oem: Avoid computation of Jacobian when only y is needed.

2016-04-09  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-474

	* methods.cc: Renamed WSM oem to OEM

	* m_oem: Renamed oem to OEM. Added conjugate gradient versions
	for each optimization method.

	* 3rdparte/invlib/* invlib update.

2016-04-07  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-475

	* CMakeLists.txt:

	Put OS X clang on C++11 blacklist for now. Apple Clang as well as
	vanilla clang (tested 3.6-3.8) currently fail compiling invlib on OS X
	10.11.4.

2016-04-06  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-474

	* 3rdparte/invlib/* invlib update.

	* m_oem.cc: Optimized invlib forward model interface to avoid
	unnecessary computation of the Jacobian.

2016-04-06  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-473

	* CMakeLists.txt, src/CMakeLists.txt:

	Move all CXX11 detection into one place in toplevel CMakeLists.txt. Set
	C++11 compiler flags globally (if enabled). Set maximum template depth globally
	to 1024.

	Add Intel compiler <16.1(unreleased) to C++11 blacklist.
	In version 16.0, it does not yet support all necessary C++11 features.

	* config.h.cmake: Add CXX11_SUPPORT preprocessor definition.

	* src/main.cc, src/m_oem.cc: Use CXX11_SUPPORT preproc constant.

	* 3rdparty/Eigen/Core:
